--- a/src/introduction.tex
+++ b/src/introduction.tex
@@ -16,14 +16,14 @@ Dans de nombreux contextes le gain de temps est le maître mot. Le domaine profe
 
 %%%%%%%%%% Context de l'entreprise %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 
-Les technologies évoluent au fil des années, imposant la mise à jour des anciens outils pour éviter toute faille de sécurité, améliorer l'ergonomie, mais aussi la simplicité d'utilisation.
+Limagrain utilise un outil un outil de recrutement, développé il y a plus de dix ans par un membre de service ne possédant de compétence en développement. Dû au nombre de recrutements de plus en plus élevé, et  l'augmentation de la charge de travail, Limagrain désire faire évoluer son outil pour faciliter le processus actuel.
 \\
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 %%%%%%%%%% Problème %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 
-Lorsqu'un logiciel existe depuis plus de dix ans, il est souvent nécessaire de le faire évoluer pour subvenir aux besoins actuels. Mais lorsque celui-ci a été développé par une personne ne possédant pas des compétences en informatique, il est quasiment impossible de le faire évoluer. La meilleure solution est donc de produire une nouvelle solution qui subviendra aux besoins actuels mais permettant l'ajout de nouvelles fonctionnalités.
+Le passage des années, ainsi que l'évolution des besoins, impose une mise à niveau permanente des outils informatiques. Mais lorsque celui-ci utilise des technologies trop anciennes, et ne possède pas une architecture évolutive, il est rarement possible d'intervenir. La meilleure solution est donc une ré-implémentation complète de l'outil, amenant alors à une solution structurée qui pourra évoluer facilement aux cours des années.
 \\
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
@@ -39,13 +39,8 @@ L'objet de cette étude sera d'étudier les besoins du client, puis d'implément
 
 %%%%%%%%%% Démarche %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 
-La construction d'une première machine virtuelle complète permettra de tester et de comparer les différentes techniques possibles et utilisables dans la solution finale.
-Une fois ces techniques définies, elles seront optimisées et intégrées à une seconde machine virtuelle minimale pour obtenir les meilleurs résultats possibles.
-Enfin, l'intégration de la solution dans une interface graphique permettra l'utilisation pratique et efficace d'outils, à l'origine non exécutables.
-
+L'étude de la solution actuelle et l'étude des besoins de l'utilisateur permettra de modéliser la nouvelle solution. L'implémentation d'une première version de l'application permettra de soulever les problèmes existants et d'émettre les points d'amélioration. Enfin la mise en production et l'importation des anciennes données a permis au client d'utiliser l'application.
 
 %%%%%%%%%% Plan %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 
-Tout d'abord, j'analyserai précisément le sujet, en présentation l'entreprise, la virtualisation, ainsi que la solution envisagée.
-Dans un deuxième temps je développerai la démarche suivie pour parvenir à la solution finale du projet.
-Pour terminer, je présenterai le développement et la solution obtenue.
+Tout d'abord, j'analyserai précisément le sujet, en présentation l'entreprise, ainsi que la solution actuelle et celle envisagée. Dans un deuxième temps, je présenterai l'environnement de travail et la structure du projet. Pour terminer, je présenterai la solution obtenue et les différents points d'amélioration possibles.
